Finish all Role functions
